fix(ui): fix app content layout to stretch to full page height

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -41,5 +41,6 @@ html {
     width: 100%;
     max-width: var(--app-content-width);
     margin: 0 auto;
+    flex: 1;
   }
 }
